<resources>
    <string name="app_name">MyCalculator</string>
    <string name="_1st_number">1st Number</string>
    <string name="_2nd_number">2nd Number</string>
    <string name="to_add">To ADD</string>
    <string name="to_subtract">To Subtract</string>
    <string name="to_multiply">To MULTIPLY</string>
    <string name="to_divide">To DIVIDE</string>
    <string name="validEntryBoth">Please enter both numbers to calculate!</string>
</resources>
