<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorPrimaryLight"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etnum1"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/_1st_number"
        android:inputType="numberSigned|numberDecimal"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etnum2"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/_2nd_number"
        android:inputType="numberSigned|numberDecimal"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/to_add"
        android:textColor="#212121"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSubt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/to_subtract"
        android:textColor="#212121"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/to_multiply"
        android:textColor="#212121"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/to_divide"
        android:textColor="#212121"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_horizontal"
        android:textColor="@color/ColorTextSecondary"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>